# code.company

./: .config  .config.env  .config.env.unset  .gitignore  Kconfig  ol  ol.c  overlay  overlay.c  qt  qtest.c  tv  tv.c
X-AIOS-ESL/core/apps/: CMakeLists.txt
X-AIOS-ESL/core/apps/esl2/: CMakeLists.txt  Makefile
X-AIOS-ESL/core/apps/esl2/ctrl/: common_service.c  common_service.h  esl_file.c  esl_file.h  esl_message_queue.c  esl_service.c  esl_service.h  esl_socket_udp_service.c  mqtt_control.c  mqtt_subscriber.c  mqtt_subscriber.h
X-AIOS-ESL/core/apps/esl2/model/: esl_page_model.h  esl_product_info.h  esl_push_server.h  esl_token_model.h  push_info.h
X-AIOS-ESL/core/apps/esl2/simulator/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.c  run_real_ui.sh  xos_stub.c  xos_stub.h
X-AIOS-ESL/core/apps/esl2/simulator/fixtures/: product_base_model_SIM-ESL2-001_1.json
X-AIOS-ESL/core/apps/esl2/test/: lvgl_test.c
X-AIOS-ESL/core/apps/esl2/utils/: esl_json_utils.c  esl_sign.c  esl_ui_utils.c  esl_ui_utils.h
X-AIOS-ESL/core/apps/esl2/view/: demo_overlay_preload.c  h5esl.h  h5esl_native.c  page_esl.c  page_esl.h  page_footer.c  page_overlay.c  page_overlay.h  qm_3_label.c  qm_product_comp.c  qm_product_comp.h
X-AIOS-ESL/core/apps/h5esl/: Makefile
X-AIOS-ESL/core/apps/h5esl/ctrl/: esl_file.c  esl_file.h  esl_message_queue.h  esl_socket_service.c  esl_socket_udp_service.h  mqtt_control.c  mqtt_control.h
X-AIOS-ESL/core/apps/h5esl/model/: esl_global_model.h  esl_product_info.h  esl_show_model.h  three_label_comp_model.h
X-AIOS-ESL/core/apps/h5esl/test/: lvgl_test.c
X-AIOS-ESL/core/apps/h5esl/utils/: esl_http_utils.c  esl_http_utils.h  esl_sign.c  hashmap.c  md5.h  pic_utils.c  pic_utils.h  utils.c
X-AIOS-ESL/core/apps/h5esl/view/: h5esl.h  h5esl_native.c  page_esl.c  page_esl_html.c  page_esl_html.h  page_esl_image.c  page_esl_image.h  page_esl_text.c  page_footer.c  qm_3_label.h
X-AIOS-ESL/core/apps/h5esl/view/components/: esl_down_log.h  esl_progress_bar.h
X-AIOS-ESL/core/apps/inc/: app_intent.h  app_path_conf.h
X-AIOS-ESL/core/apps/src/: CMakeLists.txt
X-AIOS-ESL/core/apps/src/utils/: xos_misc.c
X-AIOS-ESL/core/board/generic/qm10xd/: CMakeLists.txt  device_board.mk  evdev.h  fbchk.c  fbdev.c  fbdev2.c  fbdev2_10xd.c  fbdev_10xd.c  fbdev_raw.c  fbmpi.c  main.c  minimal_fb_test.c  mouse_cursor_icon.c  uvc.c  uvc.h
X-AIOS-ESL/core/board/generic/qm10xd/etc/: 240x320_2_16.c  fbtest.c
X-AIOS-ESL/core/board/generic/simulator/: CMakeLists.txt  device_board.mk
X-AIOS-ESL/core/board/generic/simulator/conf/: lv_conf.h  lv_drv_conf.h  xos_res_conf.h
X-AIOS-ESL/core/package/framework/quaextra/: CMakeLists.txt  SConscript
X-AIOS-ESL/core/package/framework/quaextra/ability/: qua_sys_plat.c
X-AIOS-ESL/core/package/framework/quaextra/components/: back_button.c  qm_image_text.c  qm_lv_obj.c  qm_message_box.c  qm_realtime_label.c  qm_row_container.c  qua_los_grad_arc.c  qua_los_loading.c  qua_los_msgpop.c
X-AIOS-ESL/core/package/framework/quaextra/debugger/: xos_debug.c
X-AIOS-ESL/core/package/framework/quaextra/font/: qua_font_ll.h  qua_fontv9.c
X-AIOS-ESL/core/package/framework/quaextra/inc/: back_button.h  http_utils.h  losplayer.h  qm_http_utils.h  qm_image_text.h  qm_jpgencoder.h  qm_lv_obj.h  qm_row_container.h  qm_updater.h  qua_font.h  qua_los_loading.h  qua_los_msgpop.h  serial_number.h  xos_misc.h
X-AIOS-ESL/core/package/framework/quaextra/lang/: CMakeLists.txt  QuaStrPackage.c
X-AIOS-ESL/core/package/framework/quaextra/logo/: logo_img.c  logo_img.h  logo_test.c
X-AIOS-ESL/core/package/framework/quaextra/menu/: CMakeLists.txt  menu_res_map.h  menu_view.c
X-AIOS-ESL/core/package/framework/quaextra/player/: SConscript  xosplayer.c
X-AIOS-ESL/core/package/framework/quaextra/quacurl/: CMakeLists.txt
X-AIOS-ESL/core/package/framework/quaextra/utility/: CMakeLists.txt  base64.c  qm_memstat.c
X-AIOS-ESL/core/package/libnative/: CMakeLists.txt
X-AIOS-ESL/core/package/libnative/qlibagora/include/: agora_rtc_api.h
X-AIOS-ESL/core/package/libnative/qlibcjson/ubuntu/: libcjson.so.1
X-AIOS-ESL/core/package/libnative/qlibcurl/lib/: libcurl.la
X-AIOS-ESL/core/package/libnative/qlibeffects/: SConscript
X-AIOS-ESL/core/package/libnative/qlibeffects/include/: qme_lv.h  qua_los_3d.h  qua_los_blend.h  qua_lvgl.h  qua_mmz_api.h
X-AIOS-ESL/core/package/libnative/qlibffmpeg/fy00_linux/: libavcodec.so.60.31.102  libswresample.so.4.12.100
X-AIOS-ESL/core/package/libnative/qlibiniparser/: CMakeLists.txt  Makefile
X-AIOS-ESL/core/package/libnative/qlibparam/include/: param.h
X-AIOS-ESL/core/package/libnative/qlibpng/: SConscript
X-AIOS-ESL/core/package/libnative/qlibquammapi/: SConscript  build_sample.sh
X-AIOS-ESL/core/package/libnative/qlibzlib/: SConscript
core/package/framework/cloudadp/: CMakeLists.txt  build.sh
core/package/framework/cloudadp/Platform/: linux-arm.cmake
core/package/framework/cloudadp/src/: cadp_aiskill.c  cadp_videocall_agora.c  cadp_videocall_kvs.c  qua_capture_audio.c
core/package/framework/quaextra/ability/: CMakeLists.txt  qua_sys_para.c  xos_ability.c  xos_ability.h
core/package/framework/quaextra/components/: CMakeLists.txt  cool_button.c  qm_img_txt_flex.c  qm_time_label.c
core/package/framework/quaextra/debugger/: CMakeLists.txt  xos_debug.h  xos_log.h
core/package/framework/quaextra/floatwindow/: CMakeLists.txt  xos_float_wnd.c  xos_float_wnd.h
core/package/framework/quaextra/font/: CMakeLists.txt  qua_font_ll.c  qua_fontv8.c
core/package/framework/quaextra/logo/: CMakeLists.txt
core/package/framework/quaextra/player/: CMakeLists.txt
core/package/framework/quaextra/quadevicesn/: CMakeLists.txt
core/package/libnative/qlibffmpeg/: CMakeLists.txt  SConscript
core/package/libnative/qlibffmpeg/fy00_linux/: libavformat.so.60.16.100  libavutil.so.58.29.100  libswscale.so.7.5.100
core/package/libnative/qlibffmpeg/qm10xh_linux/: libavutil.so.58.29.100  libswresample.so.4.12.100
core/package/libnative/qlibffmpeg/qm10xv_linux/: libavfilter.so.9.12.100
product/esl2/src/: CMakeLists.txt
(+3718 files in other folders)
